# PMCR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: api.md  contributing.md  index.md  usage.md
examples/complex_conflict/: pyproject.toml  requirements.txt
examples/simple_conflict/: pyproject.toml  requirements.txt
src/modguard/: __init__.py  cli.py
src/modguard/dependency/: __init__.py  graph.py  resolver.py
src/modguard/detector/: __init__.py  collision_detector.py
src/modguard/extractor/: __init__.py  module_extractor.py
src/modguard/fix/: engine.py  shim.py  version_resolver.py
src/modguard/integrations/: __init__.py  github.py  precommit.py
src/modguard/models/: __init__.py  conflict.py  fix_plan.py
tests/: __init__.py  test_cli.py  test_collision_detector.py  test_dependency_graph.py  test_fix_engine.py  test_module_extractor.py
