[metadata]
name = pmcr
description = Detect and resolve Python module namespace collisions
long_description = file: README.md
long_description_content_type = text/markdown
author = ModGuard Contributors
author_email = calculus069@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    importlib-metadata>=1.0.0;python_version<'3.8'
    toml>=0.10.0
    click>=8.0.0
    colorama>=0.4.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    modguard = modguard.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203